@@ -350,6 +350,18 @@
 				<code>org.eclipse.sirius.tests.swtbot.support.api.widget.SWTBotSiriusFigureCanvas.mouseDragWithKeys(int, int, int, int, AtomicBoolean, int...)</code>, have been added to make a drag an drop with more than one key modifier.
 			</li>
 		</ul>
+		<h4 id="Changesinorg.eclipse.sirius.ecore.extender">Changes in 
+			<code>org.eclipse.sirius.ecore.extender</code>
+		</h4>
+		<ul>
+			<li><span class="label label-info">Modified</span> In 
+				<code>org.eclipse.sirius.ecore.extender.business.internal.accessor.ModelAccessorAdapter</code>, the methods 
+				<code>getAdapter(ResourceSet resourceSet)</code> and 
+				<code>removeAdapter(ResourceSet resourceSet)</code> now return 
+				<code>java.util.Optional&lt;T&gt;</code> instead of instance of Sirius&#8217;s custom 
+				<code>org.eclipse.sirius.ext.base.Option&lt;T&gt;</code>.
+			</li>
+		</ul>
 		<h4 id="Changesinorg.eclipse.sirius.tests.swtbot.support">Changes in 
 			<code>org.eclipse.sirius.tests.swtbot.support</code>
 		</h4>
