@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2016 THALES GLOBAL SERVICES.
+ * Copyright (c) 2016-2019 THALES GLOBAL SERVICES and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,17 +12,16 @@
  *******************************************************************************/
 package org.eclipse.sirius.ecore.extender.business.internal.accessor;
 
+import java.util.Optional;
+
 import org.eclipse.emf.common.notify.Adapter;
 import org.eclipse.emf.common.notify.Notification;
 import org.eclipse.emf.common.notify.Notifier;
 import org.eclipse.emf.ecore.resource.ResourceSet;
 import org.eclipse.sirius.ecore.extender.business.api.accessor.ModelAccessor;
-import org.eclipse.sirius.ext.base.Option;
-import org.eclipse.sirius.ext.base.Options;
 
 /**
- * An {@link Adapter} to associate a {@link ModelAccessor} to a
- * {@link ResourceSet}.
+ * An {@link Adapter} to associate a {@link ModelAccessor} to a {@link ResourceSet}.
  * 
  * @author <a href="mailto:laurent.redor@obeo.fr">Laurent Redor</a>
  */
@@ -40,14 +39,13 @@ public class ModelAccessorAdapter implements Adapter {
     }
 
     /**
-     * Create a new ModelAccessorAdapter with <code>modelAccessor</code>, add it
-     * to the <code>resourceSet</code> and return it for convenience.
+     * Create a new ModelAccessorAdapter with <code>modelAccessor</code>, add it to the <code>resourceSet</code> and
+     * return it for convenience.
      * 
      * @param resourceSet
      *            The resource set on which to add the new ModelAccessorAdapter
      * @param modelAccessor
-     *            the ModelAccessor to reference from the new
-     *            ModelAccessorAdapter.
+     *            the ModelAccessor to reference from the new ModelAccessorAdapter.
      */
     public static void addAdapter(ResourceSet resourceSet, ModelAccessor modelAccessor) {
         ModelAccessorAdapter modelAccessorAdapter = new ModelAccessorAdapter(modelAccessor);
@@ -55,51 +53,48 @@ public class ModelAccessorAdapter implements Adapter {
     }
 
     /**
-     * Return the ModelAccessorAdapter associated to this
-     * <code>resourceSet</code> if it exists, empty {@link Option} otherwise.
+     * Return the ModelAccessorAdapter associated to this <code>resourceSet</code> if it exists, empty {@link Optional}
+     * otherwise.
      * 
      * @param resourceSet
-     *            The resource set from which to retrieve the
-     *            ModelAccessorAdapter
+     *            The resource set from which to retrieve the ModelAccessorAdapter
      * @return the associated ModelAccessorAdapter if it exists
      */
-    public static Option<ModelAccessorAdapter> getAdapter(ResourceSet resourceSet) {
+    public static Optional<ModelAccessorAdapter> getAdapter(ResourceSet resourceSet) {
         for (Adapter adapter : resourceSet.eAdapters()) {
             if (adapter instanceof ModelAccessorAdapter) {
-                return Options.newSome((ModelAccessorAdapter) adapter);
+                return Optional.of((ModelAccessorAdapter) adapter);
             }
         }
-        return Options.newNone();
+        return Optional.empty();
     }
 
     /**
-     * Remove the ModelAccessorAdapter from the list of adapters of this
-     * <code>resourceSet</code> if it exists.
+     * Remove the ModelAccessorAdapter from the list of adapters of this <code>resourceSet</code> if it exists.
      * 
      * @param resourceSet
      *            The resource set from which to remove the ModelAccessorAdapter
      * @return the ModelAccessor of the removed adapter
      */
-    public static Option<ModelAccessor> removeAdapter(ResourceSet resourceSet) {
-        Option<ModelAccessorAdapter> optionalAdapter = getAdapter(resourceSet);
-        if (optionalAdapter.some()) {
+    public static Optional<ModelAccessor> removeAdapter(ResourceSet resourceSet) {
+        Optional<ModelAccessorAdapter> optionalAdapter = getAdapter(resourceSet);
+        if (optionalAdapter.isPresent()) {
             resourceSet.eAdapters().remove(optionalAdapter.get());
-            return Options.newSome(optionalAdapter.get().getModelAccessor());
+            return Optional.ofNullable(optionalAdapter.get().getModelAccessor());
         }
-        return Options.newNone();
+        return Optional.empty();
     }
 
     /**
-     * Remove the ModelAccessorAdapter from the list of adapters of this
-     * <code>resourceSet</code> if it exists, and dispose the corresponding
-     * {@link ModelAccessor}.
+     * Remove the ModelAccessorAdapter from the list of adapters of this <code>resourceSet</code> if it exists, and
+     * dispose the corresponding {@link ModelAccessor}.
      * 
      * @param resourceSet
      *            The resource set from which to remove the ModelAccessorAdapter
      */
     public static void disposeModelAccessor(ResourceSet resourceSet) {
-        Option<ModelAccessor> optionalRemovedAdapter = removeAdapter(resourceSet);
-        if (optionalRemovedAdapter.some()) {
+        Optional<ModelAccessor> optionalRemovedAdapter = removeAdapter(resourceSet);
+        if (optionalRemovedAdapter.isPresent()) {
             optionalRemovedAdapter.get().dispose();
         }
     }
